--- a/TP_DJF/build.gradle
+++ b/TP_DJF/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
     implementation 'com.mysql:mysql-connector-j:8.1.0'
 
+
     implementation 'org.springframework:spring-core:5.3.30'
     implementation 'org.springframework:spring-web:5.3.30'
     implementation 'org.springframework:spring-webmvc:5.3.30'
@@ -30,9 +31,16 @@ dependencies {
     implementation 'org.springframework:spring-context:5.3.30'
     implementation 'org.springframework:spring-expression:5.3.30'
 
+    implementation 'org.springframework:spring-aop:5.3.30'
+    implementation 'org.springframework:spring-tx:5.3.30'
+    implementation 'org.springframework:spring-jdbc:5.3.30'
+
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
+
 
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
